css/main.css
*  {
    box-sizing: border-box;
}

body {
    background-color:#AAB2ED;
    margin: 0;
    min-height: 100vh;
    position: relative;
}

/***Navigation Bar*****/
nav {
    background-color: #5745A3;
    font-family: 'Bitter', Arial, Helvetica, sans-serif;
    font-weight: 400;
    position: fixed;
    top: 0;
    padding-left: 5px;
    padding-right: 10px;
    width: 100%;
    height: 60px;
    z-index: 1;
    color: #FFFFFF;
}

ul {
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 0;
    height: 100%;
    margin: 0;
    font-size: 1.25em;
}

li {
    list-style: none;
}

.nav-links {
    text-decoration: none;
    color: #FFFFFF;
}

.nav-links:focus {
    border-bottom: 5px solid #EFE375;
    outline: hidden;
}

.nav-links:hover {
    color: #EFE375;
    cursor: pointer;
    text-shadow: 2px 3px 8px #000000;
}

.selected {
    color: #EFE375;
    text-shadow: 2px 3px 8px #000000;
}

main {
    font-family: 'AbeeZee', Georgia, 'Times New Roman', Times, serif;
}

/*****Intro Headline Banner *****/
.home {
    background-image: url('../images/background-lights.jpg');
    background-repeat: repeat; 
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100vh;
    background-color: #5745A3;
}

.intro {
    height: 170px;
    width: 320px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    color: white;
    text-shadow:1px 1px 2px black, 0 0 25px black, 0 0 5px black;
}


.intro > h1 {
    font-family: 'Delius', 'Arial', 'sans-serif';
    color: white;
    font-size: 2.9em;
    margin: 0;
    text-align: center;
}

.intro > h2 {
    font-family: 'Bitter', 'Times New Romans', 'serif';
    font-size: 1.8em;
    font-weight: 400;
    margin: 0;
}

/***About Me Content********/

.about-info {
    width: 280px;
    margin: 100px auto 0;
    font-size: 1em;
    line-height: 1.15em;
    padding-bottom: 40px;
}

.about-info > h1 {
    font-size: 2.3em;
    font-weight: 400;
    text-align: center;
    font-family: 'Bitter', Arial, Helvetica, sans-serif;
}

/***Portfolio Content*****/
.portfolio-info {
    width: 280px;
    line-height: 1.18em;
    margin: 100px auto 0;
    padding-bottom: 40px;
}

.portfolio-title {
    font-size: 2.3em;
    font-weight: 400;
    text-align: center;
    font-family: 'Bitter', Arial, Helvetica, sans-serif;
    padding-bottom: 30px;
    border-bottom: 3px solid #5745A3;
}

.project, .project-journal  {
    margin-bottom: 30px;
}

.portfolio-images {
    display: flex;
    justify-content: center;
}

.portfolio-images-hike {
    display: flex;
    justify-content: space-around;
}

.project-image-hike,
.project-mobile-journal,
.project-image {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.project-image-hike {
    width: 40%;
    border-radius: 5px;
}

.portfolio-images-journal {
    width: 100%;
    height: 442px;
    border-radius: 5px;
}

.project-journal > h2 {
    margin-top: 30px;
}

.project-mobile-journal {
    border-radius: 5px;
    width: 100%;
}

.project-image {
    width: 90%;
    border-radius: 5px;
}

.portfolio-info > h2 {
    text-align: center;
    font-size: 1.5em;
}

.technology {
    color: white;
}

.fa-react, 
.fa-node-js, 
.fa-html5, 
.fa-css3, 
.fa-js,
.fa-database {
    color: white;
    font-size: 1.5em;
}

strong {
    color: black;
}

.sr-only {
    position:absolute;
    left:-10000px;
    top:auto;
    width:1px;
    height:1px;
    overflow: hidden;
}

.buttons {
    height: 50px;
    width: 90%;
    display: flex;
    justify-content: space-around;
    margin: 0 auto;
}

.buttons > a {
    color: #5745A3;
    font-family: 'AbeeZee', Georgia, serif;
    font-weight: 600;
    font-size: 1.1em;
    text-decoration: none;
    border: 2px solid #5745A3;
    border-radius: 5px;
    background-color: #AAB2ED;
    height: 40px;
    width: 90px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.buttons > a:hover {
    background-color: #5745A3;
    border: 2px solid white;
    cursor: pointer;
    color: white;
    transition: 0.3s;
}

.buttons > a:focus {
    background-color: #5745A3;
    border: 2px solid white;
    color: white;
    transition: 0.3s;
}

/*****Contact Information****/

.contact-info {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    height: 100vh;
    margin: 0 auto;
    padding-top: 40px;
    padding-bottom: 40px;
    width: 280px;
}

.contact-info > h1 {
    color: #5745A3;
    font-size: 2.5em;
    text-align: center;
}

.contact-info > p {
    font-size: 2em;
    color: white;
    text-align: center;
    margin-top: 0;
}

.contact-icons {
    display: flex;
    justify-content: space-evenly;
}

.contact-icons > a {
    color: #5745A3;
    font-size: 2.5em;
    text-decoration: none;
    cursor: pointer;
}

.contact-icons > a:hover {
    color: #EFE375;
    transition: 0.3s;
}

.contact-icons > a:focus {
    color: #EFE375;
    transition: 0.3s;
}

/****Footer*****/

footer {
    background-color: #5745A3;
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #FFFFFF;
}

#copyright {
    color: #FFFFFF;
    font-family: 'AbeeZee', Georgia, 'Times New Roman', Times, serif;
    font-size: 1em;
    margin: 0;
    text-align: center;
}

/**Media Queries***/

@media screen and (min-width: 475px) {

    .home-icon {
        width: 45px;
    }

    li {
        font-size: 1.5em;
    }

    .about-info {
        font-size: 1.3em;
        line-height: 1.4em; 
        width: 80%;
        margin-top: 100px;
    }

    .portfolio-images {
        height: 680px;
    }

    .portfolio-title {
        font-size: 2.5em;
    }

    .portfolio-info {
        font-size: 1.3em;
        margin-bottom: 60px;
        width: 530px;
        line-height: 1.4em;
    }

    .portfolio-images-journal {
        width: 60%;
        height: 502px;
        margin: 0 auto;
    }

    .buttons > a {
        height: 60px;
        width: 124px;
    }

    .contact-info {
        bottom: 90px;
        line-height: 3.2em;
        width: 530px;
        min-height: 80vh;
    }

    .contact-info > h1 {
        font-size: 3em;
    }
    
    .contact-info > h2 {
        font-size: 2.3em;
    }

    .contact-icons > a {
        font-size: 3em;
    }

}

@media screen and (min-height: 520px) {

    .portfolio-images {
        margin-bottom: 50px;
    }
}

@media screen and (min-width: 672px) {

    .about-info {
        margin-top: 100px;
        width: 520px;
    }

    .intro {
        height: 200px;
        width: 400px;
    }

    .intro > h1 {
        font-size: 4.3em;
    }
    
    .intro > h2 {
        font-size: 2.3em;
    }

    .project, .project-journal {
        margin-bottom: 70px;
    }

    .portfolio-info {
        margin-bottom: 0;
    }
}

@media screen and (min-width: 790px) {

    .about-info {
        font-size: 1.3em;
        line-height: 1.5em;
        width: 700px;
    }

    .portfolio-images {
        height: 650px;
        width: 500px;
    }

    .project-mobile-journal {
        max-width: 318px;
    }

    .portfolio-title {
        font-size: 3em;
    }

    .portfolio-info {
        font-size: 1.3em;
        width: 700px;
    }

    .buttons > a {
        height: 60px;
        width: 144px;
    }

    .contact-info {
        width: 700px;
    }

}

@media screen and (min-height: 810px) {
    .about-info {
        display: flex;
        flex-direction: column;
        padding-bottom: 0;
    }
}

@media screen and (min-width: 912px) {

    .intro {
        height: 230px;
        width: 480px;
    }

    .intro > h1 {
        font-size: 4.9em;
    }
    
    .intro > h2 {
        font-size: 2.6em;
    }

    .project-journal {
        height: 610px;
        width: 800px;
        margin-bottom: 20px;
    }

    .project {
        height: 550px;
        width: 800px;
    }

    .portfolio-images-journal {
        float: left;
        width: 40%;
        height: 502px;
        margin: 0 20px 0 0;
        overflow-y: hidden;
        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    }

    .portfolio-images-hike {
        float: right;
        height: 460px;
        width: 450px;
    }

    .project-image-hike {
        height: 450px;
        width: 200px;
    }

    .portfolio-images {
        height: 600px;
        width: 450px;
        float: left;
        margin-bottom: 50px;
    }

    .portfolio-info {
        font-size: 1.3em;
        width: 800px;
    }

    .buttons {
        width: 40%;
    }
}

@media screen and (min-width: 1530px) {

    .home-icon {
        width: 50px;
    }

    li {
        font-size: 2em;
    }

    .about-info {
        font-size: 1.3em;
        line-height: 1.5em;
        width: 700px;
    }

    .portfolio-images-hike {
        float: right;
        height: 460px;
        width: 530px;
    }

    .project-image-hike {
        height: 490px;
        width: 240px;
    }

    .project {
        height: 600px;
        width: 900px;
        margin-bottom: 20px;
        margin-left: auto;
        margin-right: auto;
    }

    .project:last-child {
        margin-bottom: 90px;
    }

    .portfolio-images {
        height: 650px;
        width: 500px;
        float: left;
    }

    .portfolio-info {
        font-size: 1.3em;
        width: 1000px;
    }

    .buttons {
        width: 40%;
    }

    .contact-info {
        width: 800px;
    }

}

@media screen and (min-width: 1600px) {

    .about-info {
        font-size: 1.3em;
        line-height: 1.5em;
        width: 700px;
    }

    .portfolio-images {
        height: 650px;
        width: 500px;
        float: left;
    }

    .portfolio-info {
        font-size: 1.3em; 
        width: 1000px;
    }

    .buttons {
        width: 40%;
    }

    .contact-info {
        width: 800px;
    }

}

